# GTAVC-Source

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rockstargames/gtavc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  cpp.rar
app/src/main/cpp/jni/: ARMHook.h  Android.mk  CHooks.cpp  CMakeLists.txt  jniutil.h  main.cpp  main.h
app/src/main/cpp/jni/dependencies/armhook/: patch.cpp  patch.h
app/src/main/cpp/jni/dependencies/obfuscator/: obfusheader.h
app/src/main/cpp/jni/game/: game.cpp  game.h  hooks.cpp  hooks.h  patches.cpp  scripting.cpp
app/src/main/cpp/jni/game/RW/: RenderWare.cpp  RwHelper.cpp  badevice.h  color.h  image.h  memory.h  pipe.h  raster.h  rphanim.cpp  rpskin.cpp  rpskin.h  rpworld.cpp  rpworld.h  rtanim.cpp  rtquat.cpp  rwcore.cpp  rwcore.h  rwplcore.cpp  rwplcore.h  rwstring.h  stream.h  tkreg.h  types.h
app/src/main/cpp/jni/game/RW/opengl/: openglpipepriv.h
app/src/main/java/com/nvidia/devtech/: NvAPKFileHelper.java  NvEventQueueActivity.java  NvUtil.java
app/src/main/java/com/rockstargames/gtavc/: GTAVC.java
app/src/main/java/com/wardrumstudios/utils/: MediaVault.java  MediaVaultRequest.java  NDKHelper.java  WarActivityLifecycleListener.java  WarAdMob.java  WarAlarmReceiver.java  WarBase.java  WarBilling.java  WarBootNotify.java  WarBootReceiver.java  WarDownloader.java  (+8 more)
app/src/main/res/layout/: edgar_render_screen.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
